# OnvifRtspLauncher

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
src/: onvif-client.c  onvif-server-snapshot.c  onvif-server-snapshot.h  onvif-server.c  onvif-server.h  onvifinitstaticplugins.c  onvifinitstaticplugins.h  sink-retriever.c  sink-retriever.h  vencoder-retriever.c  vencoder-retriever.h
src/alsa/: alsa_utils.c
src/gst/: ext_rtsp_onvif_media_factory.c  ext_rtsp_onvif_media_factory.h
src/v4l/: v4l2-device.c  v4l2-device.h  v4l2_match_result.c  v4l2_match_result.h
